--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Wenbo
+first_name: Zhendong
 middle_name: 
-last_name: Zhang
-email: wenbz13@uci.edu
+last_name: Wang
+email: zhendong.wang@utexas.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
@@ -18,7 +18,7 @@ keywords: jekyll, jekyll-theme, academic-website, portfolio-website  # add your 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
-url: https://onepounchman.github.io # the base hostname & protocol for your site
+url: https://zhendong-wang.github.io # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
@@ -55,11 +55,11 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: onepounchman # your GitHub user name
+github_username: Zhendong-Wang # your GitHub user name
 gitlab_username: # your GitLab user name
-twitter_username: wenboz123 # your Twitter handle
-linkedin_username: wenbo-zhang-2b0019169# your LinkedIn user name
-scholar_userid: 7IV2H5IAAAAJ # your Google Scholar ID
+twitter_username: ZhendongWang6 # your Twitter handle
+linkedin_username: # your LinkedIn user name
+scholar_userid: lRiIjhcAAAAJ # your Google Scholar ID
 orcid_id: # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
