--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Yuhao
+first_name: Wenbo
 middle_name:
 last_name: Zhang
-# email: you@example.com
+# email: wenbz13@uci.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Yuhao Zhang's Homepage
+  Wenbo Zhang's Homepage
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
 keywords: # add your own keywords or leave empty
@@ -65,13 +65,13 @@ og_image: https://yuhaozhang.github.io/assets/img/yuhao-zoomed.jpg # The site-wi
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: yuhaozhang # your GitHub user name
+github_username: onepounchman # your GitHub user name
 gitlab_username: # your GitLab user name
-x_username: yuhaozhangx # your X handle
+x_username: wenboz123 # your X handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
-linkedin_username: yh-zhang # your LinkedIn user name
+linkedin_username: wenbo-zhang-2b0019169 # your LinkedIn user name
 telegram_username: # your Telegram user name
-scholar_userid: 2d-0ybAAAAAJ # your Google Scholar ID
+scholar_userid: 7IV2H5IAAAAJ # your Google Scholar ID
 semanticscholar_id: # your Semantic Scholar ID
 whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
 orcid_id: # your ORCID ID
