--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -31,5 +31,5 @@
       institution: IQVIA
       year: summer 2022
       description:
-        - Developed a causality inspired self-explainning neural prediction models 
+        - Develop Causality Inspired Self-explainning Neural Prediction Models 
 
