--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,8 @@ on:
       - "**.liquid"
       - "**/*.md"
       - "**.yml"
+      - "**.bib"         # ADD
+      - "**/*.bib"       # ADD
       - "Gemfile"
       - "Gemfile.lock"
       - "!.github/workflows/axe.yml"
